# XYFSoftRenderer

./: .gitignore  CMakeLists.txt  README.md  RenderWidget.ui  XYFRenderWidget.cpp  XYFRenderWidget.h  XYFSoftRender.cpp  XYFSoftRender.h  XYFSoftRender.ui  main.cpp
Base/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
RendererCore/: CMakeLists.txt  DataDefine.hpp  FrameBuffer.cpp  FrameBuffer.h  MyTexture.cpp  MyTexture.h  RendererDevice.cpp  RendererDevice.h  RendererHelp.hpp  Shader.hpp
Shader/: BlinnPhongShader.cpp  BlinnPhongShader.h  CMakeLists.txt
